Resizing diconnectionPane and using virtual threads